- fixed bug in cons_indicator.c:SCIPmakeIndicatorFeasible() with handling fixed variables
- fixed bug in sepa_zerohalf.c where the maxcuts(root) parameters led to an invalid memory allocation call
- fixed bug in sepa_closecuts: need to make sure that variable values of separation point satisfy bounds
- fixed bug in intervalarith.c: bivariate quad. equations may have been solved wrongly if second variable is unbounded 
- fixed bug in cons_integral: need to make sure that all implicit integer variables are integral when a solution is
  checked
- fixed bug in cons_abspower: wrong infinity check when propagating bounds
- fixed bugs in sepa_oddcylce: number of arcs have to be adjusted, handle implicit binary variables,
  fixed bug in heuristic separation method, fixed asserts
- fixed bugs with freeing C++ object data for problem and variables
- fixed wrong bound calculation in sepa_rapidlearning
- fixed bug with infinite multi-aggregation constants
- fixed bug that old LP size was not updated for deadend if no LP was solved
- fixed bug that removing reverse implication did not reset closestvblpcount
- fixed bug that the number aggregated variables were not counted in the presol_inttobinary.c

features:
- can now output the solutions in the solution pool in the interactive shell
- updated Mosek interface to compile with Mosek 7, too
- reading erroneous CIP files can now output some indication of syntax errors
- can now run splint on core files
- cons_xor now uses the integral variable in propagation
- allowed to switch on/off the solution debugging

performance improvements:
- improved SCIPlpiAdd{Cols,Rows}() in SoPlex LPi

interface:
- allow to add columns (rows) with nonzero indices beyond current number of rows (columns) in SoPlex LPi
- remove problematic function cons_indicator:SCIPsetSlackVarIndicator()
- added methods SCIPmarkColNotRemovableLocal() and SCIPmarkRowNotRemovableLocal() to forbid removal of an column/row
  from the LP in the current node

