@@ -37,7 +37,7 @@ fixed bugs:
 - fixed bug in cons_indicator.c:SCIPmakeIndicatorFeasible() with handling fixed variables
 - fixed bug in sepa_zerohalf.c where the maxcuts(root) parameters led to an invalid memory allocation call
 - fixed bug in sepa_closecuts: need to make sure that variable values of separation point satisfy bounds
-- fixed bug in intervalarith.c: bivariate quad. equations may have been solved wrongly if second variable is unbounded 
+- fixed bug in intervalarith.c: bivariate quad. equations may have been solved wrongly if second variable is unbounded
 - fixed bug in cons_integral: need to make sure that all implicit integer variables are integral when a solution is
   checked
 - fixed bug in cons_abspower: wrong infinity check when propagating bounds
@@ -48,7 +48,8 @@ fixed bugs:
 - fixed bug with infinite multi-aggregation constants
 - fixed bug that old LP size was not updated for deadend if no LP was solved
 - fixed bug that removing reverse implication did not reset closestvblpcount
-- fixed bug that the number aggregated variables were not counted in the presol_inttobinary.c
+- fixed bug that the number aggregated variables were not counted in presol_inttobinary.c
+- fixed bug that duplicate solutions stopped copying of solutions to original solution candidate store
 
 features:
 - can now output the solutions in the solution pool in the interactive shell
